# m1000

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md
src/: config.rs  mail.rs  main.rs  setup.rs  webhook.rs  websub.rs
src/event/: mod.rs  report.rs  status.rs
src/interop/: mime.rs  mod.rs  rspamd.rs
src/pattern/: account.rs  compiler.rs  instance.rs  link.rs  mod.rs  post.rs  regex.rs  rule.rs  string.rs  text.rs  user.rs
