[package]
name = "m1000"
authors = ["Vyr Cossont"]
homepage = "https://catgirl.codes/m1000"
repository = "https://github.com/VyrCossont/m1000"
version = "0.1.0"
license = "CC-BY-NC-SA-4.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
axum = { version = "0.6.11", features = [ "headers" ] }
clap = { version = "4.1.13", features = [ "derive" ] }
futures = "0.3.27"
glob = "0.3.1"
hex = "0.4.3"
hmac = "0.12.1"
lazy_static = "1.4.0"
log = "0.4.17"
mail-builder = "0.2.5"
mastodon-async = { version = "1.2.1", default-features = false, features = [ "rustls-tls", "toml", "json", "env", "mt" ] }
regex = "1.7.3"
reqwest = { version = "0.11.14", default-features = false, features = [ "rustls-tls" ] }
schemars = { version = "0.8.12", features = [ "preserve_order" ] }
scraper = "0.16.0"
serde = { version = "1.0.156", features = [ "derive" ] }
serde_json = "1.0.94"
serde_yaml = "0.9.19"
sha1 = "0.10.5"
sha2 = "0.10.6"
time = { version = "0.3.20", features = [ "formatting", "parsing", "serde" ] }
tokio = { version = "1.26.0", features = [ "sync", "rt-multi-thread", "process" ] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
twitter-text = "0.2.0"
url = "2.3.1"

[patch.crates-io]
#mastodon-async = { path = "../mastodon-async" }
mastodon-async = { git = "https://github.com/VyrCossont/mastodon-async.git", branch = "comb" }

[profile.release-max]
# Saves about 6 MB off a 20 MB build but makes compilation much, much slower.
inherits = "release"
codegen-units = 1
lto = true
